# elastic_datashader

./: .dockerignore  .gitignore  CHANGELOG.MD  CONTRIBUTING.md  Dockerfile  Elastic Datashader.html  LICENSE  LICENSE.txt  Makefile  README  README.md  bundle.sh  cache_build.py  data_shader.patch  datashader_helpers.py  datemath.py  index_config.yaml  kibana.json  logging_config.yml  pyproject.toml  pytest.ini  requirements.txt  runtms_docker.sh  setup.py  tile_layer.js  tms_datashader.py  tms_pixellock.py  tsconfig.json
.github/workflows/: CI.yml  release.yml  test.yml  unittests.yml
common/: index.ts
deployment/: Dockerfile  gunicorn_config.py  logging_config.yml
doc/: CONTRIBUTING.md
elastic_datashader/: __init__.py  cache.py  cli.py  config.py  constants.py  drawing.py  elastic.py  logger.py  main.py  mercantile_util.py  pandas_util.py  parameters.py  routes.py  tilegen.py  timeutil.py  views.py
elastic_datashader/helpers/: __init__.py  cache.py  config.py  drawing.py  elastic.py  mercantile_util.py  pandas_util.py  parameters.py  tilegen.py  timeutil.py
elastic_datashader/routers/: cache.py  data.py  index.py  indices.py  legend.py  parameters.py  tms.py
elastic_datashader/templates/: index.html
kibana/: Dockerfile  Makefile  README  schema.js.patch
public/: kibana_services.ts  plugin.ts  types.ts
public/classes/: custom_raster_editor.tsx  custom_raster_layer_wizard.tsx  custom_raster_source.tsx
public/classes/fields/: field.ts
public/classes/ui/: datashader_geo_field_editor_field.tsx  datashader_geo_index_editor_field.tsx  datashader_style.tsx  datashader_url_editor_field.tsx  geo_index_pattern_select.tsx
public/classes/ui/util/: load_index_doc_count.ts
templates/: add_config.html  base.html  color_map.html  display_config.html  index.html  index_config.html  layers.html  parameters.html
tests/: test_cache.py  test_config.py  test_drawing.py  test_elastic.py  test_pandas_util.py  test_parameters.py  test_tilegen.py  test_timeutil.py  test_tms_router.py  test_views.py
tests/dat/: gen_debug_overlay.txt  gen_error.txt  gen_overlay.txt
tms_datashader_api/: routes.py  views.py
tms_datashader_api/helpers/: __init__.py  cache.py  config.py  datashader_helpers.py  drawing.py  elastic.py  mercantile_util.py  pandas_util.py  parameters.py  tilegen.py  timeutil.py  wsgi.py
tms_pixellock_api/: routes.py
tms_pixellock_api/helpers/: cache.py  drawing.py  elastic.py  pandas_util.py  parameters.py  tilegen.py
