[tool.poetry]
name = "elastic_datashader"
version = "0.0.6"
description = "Elastic-Datashader TMS Server"
authors = ["Spectric Labs <foss@spectric.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/spectriclabs/elastic_datashader"
classifiers = [
	"Topic :: Scientific/Engineering :: GIS",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Scientific/Engineering :: Visualization"
]

[tool.poetry.scripts]
elastic_datashader = "elastic_datashader.cli:main"

[tool.poetry.dependencies]
python = ">=3.8,<4"
elasticsearch = ">=7.16"
elasticsearch-dsl = ">=7.4"
pyOpenSSL = "*"
datashader = ">=0.11.0"
pandas = "*"
colorcet = "*"
mercantile = ">=1.2"
pypng = "*"
Pillow = "*"
pynumeral = "*"
arrow = "*"
python-datemath = "*"
numba = "*"
numpy = ">=1.19"
PyYAML = "*"
humanize = "*"
uvicorn = {extras = ["standard"], version = "*", optional = true}
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
pylint = "*"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.poetry.extras]
apm = ["elasticapm"]
localwebserver = ["uvicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38
isolated_build = true

[gh-actions]
python =
	3.8: py38
	3.9: py39

[testenv]
setenv =
	DATASHADER_VERIFY_INDICES = false

deps =
	pylint
	pytest
	pytest-cov
	requests

commands =
	pylint --disable=R,C,fixme elastic_datashader
	pytest --cov-report term-missing --cov=elastic_datashader
"""
