[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "elastic_datashader"
version = "0.0.6"
description = "Elastic-Datashader TMS Server"
authors = ["Spectric Labs <foss@spectric.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/spectriclabs/elastic_datashader"
classifiers = [
	"Topic :: Scientific/Engineering :: GIS",
	"Topic :: Scientific/Engineering :: Information Analysis",
	"Topic :: Scientific/Engineering :: Visualization"
]

[tool.poetry.scripts]
elastic_datashader = "elastic_datashader.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4"
elasticsearch = "7.17.4"
elasticsearch-dsl = "7.4.0"
datashader = "0.14.2"
pandas = "^1.5.3"
colorcet = "^3.0.1"
mercantile = "1.2.1"
pypng = "*"
Pillow = "*"
pynumeral = "*"
arrow = "*"
python-datemath = "*"
numba = "0.56.4"
numpy = "^1.23"
PyYAML = "*"
humanize = "*"
uvicorn = {extras = ["standard"], version = "^0.18.2", optional = true}
fastapi = "^0.86"
georgio = "2023.119.77"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
pylint = "*"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.poetry.extras]
apm = ["elasticapm"]
localwebserver = ["uvicorn"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 150
disable = "too-many-nested-blocks,too-many-branches,too-many-statements,R0801,R0902,R0903,R0911,R0913,R0914,C0103,C0114,C0115,C0116,C0123,C0301,C0302,fixme"

[tool.black]
line-length = 150

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = true
recreate = true

[gh-actions]
python =
	3.10: py310

[testenv]
setenv =
	DATASHADER_VERIFY_INDICES = false

deps =
	geopy
	flake8
	pylint
	pytest
	pytest-cov
	requests

allowlist_externals =
	mkdir

commands =
	flake8 --select E201,E202,E231,E262,E265 elastic_datashader
	pylint elastic_datashader
	mkdir -p {toxinidir}/tms-cache
	pytest --cov-report term-missing --cov=elastic_datashader
"""
